--- a/Member/index.html
+++ b/Member/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../society-members/app/css/reset.css" type="text/css" />
-    <link rel="stylesheet" href="../society-members/app/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="css/reset.css" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
 
     <title></title>
 </head>
